@@ -15,6 +15,10 @@ For change history for MOST, see most/docs/CHANGES.
 Changes since 5.1
 -----------------
 
+5/24/16
+    - Fix bug in toggle_dclines() that resulted in fatal error when
+      used with OPF with reactive power costs. Thanks to Irina Boiarchuk.
+
 5/18/16
     - Add plot_mpc(), contributed by Paul Cuffe, to extras/misc. Plots
       an electrically meaningful drawing of a MATPOWER case.
